Check in for the day

--- a/template/BankingCart.html
+++ b/template/BankingCart.html
@@ -263,7 +263,7 @@ We will tell you profit & loss of each transaction so that you can monitor the h
 					</td>
 					<td><span itemId="{{ c.key.id() }}" item="payable-balance">0</span></td>
 					<td>
-						<span item="remove-tr-from-payable-table" style="text-decoration:underline;">Pay this later</span>
+						<span item="remove-tr-from-payable-table" style="text-decoration:underline;">Pay later</span>
 					</td>
 				</tr>
 				{% endfor %}
