--- a/template/BrowseBuyOrderByOwner.html
+++ b/template/BrowseBuyOrderByOwner.html
@@ -30,13 +30,21 @@
 	
 	<div class="list-of-category-section">
 		{% for item in orders|dictsort %}
-			<h3>{{ item[0]|title }}</h3>
-			<div id="tab-{{ loop.index }}">
+			<h3>
 				<a href="/buyorder/owner/{{ owner.id() }}/{{ item[0] }}/">
-				{% for v in item[1] %}
-					<img src="{{ v['image'] }}" width="100px" height="100px"/>
-				{% endfor %}
+					{{ item[0]|title }}
 				</a>
+			</h3>
+			<div id="tab-{{ loop.index }}" class="list-of-photo">
+				<ul>
+				{% for v in item[1] %}
+				<li>
+				<a href="/buyorder/browse/{{ v.key.id() }}/">
+					<img src="{{ v['image'] }}"/>
+				</a>
+				</li>
+				{% endfor %}
+				</ul>
 			</div>
 		{% endfor %}
 	
