--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -19,6 +19,15 @@
 		{% endif %}
 		
 		{% if me.can_be_doc() %}
+		<li id="nav-buyorder-owner">
+			<a href="/buyorder/owner/{{ me.key.id() }}/" title="View my posted orders by category">
+				<img src="http://cdn5.iconfinder.com/data/icons/high-resolution-app-tab-bar-icons/60/Category.png" />
+			</a>
+			<h3>My Posts</h3>
+		</li>
+		{% endif %}
+
+		{% if me.can_be_doc() %}
 		<li id="nav-buyorder-post">
 			<a href="/buyorder/new" title="Post a new order">
 				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/57/compose-128.png" />
@@ -34,14 +43,5 @@
 			<h3>Approval</h3>
 		</li>
 		
-		{% if me.can_be_doc() %}
-		<li id="nav-buyorder-owner">
-			<a href="/buyorder/owner/{{ me.key.id() }}/" title="View my posted orders by category">
-				<img src="http://cdn5.iconfinder.com/data/icons/high-resolution-app-tab-bar-icons/60/Category.png" />
-			</a>
-			<h3>Categories</h3>
-		</li>
-		{% endif %}
-
 	</ul>
 {% endblock %}
