--- a/template/ManageBuyOrderCart.html
+++ b/template/ManageBuyOrderCart.html
@@ -23,7 +23,14 @@
 			);          
 		});
 		
-		j$('#table-carts').dataTable({
+		
+		j$('#tabs-min').tabs({
+
+		});
+		j$('#my-carts').dataTable({
+			"sPaginationType": "full_numbers"
+		});
+		j$('#broker-carts').dataTable({
 			"sPaginationType": "full_numbers"
 		});
     });
@@ -38,7 +45,15 @@
 		links to get details of a cart to assist your decision. May the force be with you.
 	</p>
 
-<table class="pretty" border="0" cellpadding="0" cellspacing="0"  id="table-carts">
+	<div id="tabs-min">
+		<ul>
+			<li><a href="#tab-my-carts">Carts I Am Selling</a></li>
+			<li><a href="#tab-broker-carts">Carts I Am Buying</a></li>
+		</ul>
+		
+		<div id="tab-my-carts">
+		
+<table class="pretty" border="0" cellpadding="0" cellspacing="0"  id="my-carts">
 	<thead>
 		<tr><td></td></tr>
 	</thead>
@@ -63,7 +78,7 @@
 									{{ c.terminal_buyer.get().nickname }}
 								{% endif %}
 							</td>
-							<td>Posting Buyer</td>
+							<td>Buyer</td>
 							<td>
 								{% if c.broker %}
 									{{ c.broker.get().nickname }}
@@ -114,5 +129,85 @@
 		{% endfor %}
 	</tbody>
 </table>
-
+	</div>
+	
+	<div id="tab-broker-carts">
+<table class="pretty" border="0" cellpadding="0" cellspacing="0"  id="broker-carts">
+	<thead>
+		<tr><td></td></tr>
+	</thead>
+	<tbody>
+		{% for c in broker_carts %}
+			<tr>
+				<td style="text-align:left;padding:10px;">
+					<a href="{{ review_url }}?cart={{ c.key.id() }}&owner={{ c.owner.id() }}">
+						<h4>
+						Cart# {{ c.key.id() }}
+						<span class="redheart" style="float:right;">
+						{{ c.status }}
+						</span>
+						</h4>
+					</a>
+					Posted on {{ c.created_time }}
+					
+					<table class="sf-table" style="margin-top:10px;margin-bottom:10px;">
+						<tr><td>For Client</td>
+							<td>
+								{% if c.terminal_buyer %}
+									{{ c.terminal_buyer.get().nickname }}
+								{% endif %}
+							</td>
+							<td>Seller</td>
+							<td>
+								{{ c.terminal_seller.get().nickname }}
+							</td>
+						</tr>								
+						<tr><td>Payable</td>
+							<td>{{ c.payable }}</td>
+							<td>Receivable</td>
+							<td>{{ c.receivable }}</td>
+						</tr>
+						<tr></tr>
+					</table>
+					
+					{% if c.fills|length > 0 %}
+					<div class="list-of-photo">
+						<ul>
+						{% for f in c.fills %}
+							<li>
+							<a href="/buyorder/browse/{{ f.order.id() }}/">
+								<img src="{{ f.order.get().image }}" width="60px" height="60px"/>
+							</a>
+							</li>
+						{% endfor %}
+						</ul>
+					</div>
+					
+					<div>
+						{% if c.status=='Open' and me.can_be_doc() %}
+							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
+						{% elif c.status=='Rejected' and me.can_be_doc() %}
+							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
+						{% elif c.status=='In Approval' and me.can_be_doc() %}
+							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Approve</button>
+							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Reject</button>
+						{% elif c.status=='Rejected' and me.can_be_doc() %}
+							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Approve</button>
+						{% endif %}
+					</div>
+					{% else %}
+					{% endif %}
+					
+					{% if c.shipping_status %}
+						{{ c.shipping_status }}
+					{% endif %}
+				</td>
+			</tr>
+		{% endfor %}
+	</tbody>
+</table>
+	
+	</div>
+	
+</div>
 {% endblock %}
