--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -195,12 +195,7 @@
 
 	<div class="searchbox">
 	<input type="text" placeholder="Enter a keyword" id="input-pinterest-filter" title="Search is case insensitive. Multiple terms are delimited by comma."/>
-	<a id="link-pinterest-filter" href="" class="ariel-button">Search</a>
-    <ul id="pinterest-filters">
-    	{% for item in hotTags %}
-    		<li>{!item}</li>
-    	{% endfor %}																
-    </ul>
+	<a id="link-pinterest-filter" class="ariel-button" style="float:right;">Search</a>
     </div>
     
     <div id="shopping-cart-container">
