--- a/template/ManageBuyOrderCart.html
+++ b/template/ManageBuyOrderCart.html
@@ -107,15 +107,10 @@
 					</div>
 					
 					<div>
-						{% if c.status=='Open' and me.can_be_doc() %}
+						{% if c.status=='Open' %}
 							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
-						{% elif c.status=='Rejected' and me.can_be_doc() %}
+						{% elif c.status=='Rejected' %}
 							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
-						{% elif c.status=='In Approval' and me.can_be_doc() %}
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Approve</button>
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Reject</button>
-						{% elif c.status=='Rejected' and me.can_be_doc() %}
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Approve</button>
 						{% endif %}
 					</div>
 					{% else %}
@@ -184,15 +179,9 @@
 					</div>
 					
 					<div>
-						{% if c.status=='Open' and me.can_be_doc() %}
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
-						{% elif c.status=='Rejected' and me.can_be_doc() %}
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Submit for Approval</button>
-						{% elif c.status=='In Approval' and me.can_be_doc() %}
+						{% if c.status=='In Approval' and me.can_be_doc() %}
 							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Approve</button>
 							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Reject</button>
-						{% elif c.status=='Rejected' and me.can_be_doc() %}
-							<button class="my-button" item="approval-process" itemId="{{ c.key.id() }}">Approve</button>
 						{% endif %}
 					</div>
 					{% else %}
