--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -7,7 +7,7 @@
 			<a href="/buyorder/browse" title="Browse and shop">
 				<img src="http://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/zoom-in-128.png" />
 			</a>
-			<h3>Browe</h3>
+			<h3>Browse</h3>
 		</li>
 
 		<li id="nav-cart-review">
