--- a/template/base.html
+++ b/template/base.html
@@ -72,8 +72,8 @@
 				</a>
 			</li>			
 			<li id="nav-user">
-				<a href="/user/profile">
-				Membership
+				<a href="/user/contact">
+				My Profile
 				</a>
 			</li>
 			<li id="nav-reporting">
