--- a/template/UserBase.html
+++ b/template/UserBase.html
@@ -6,12 +6,12 @@
 			<a href="/user/contact" title="Browse and shop">
 				<img src="http://cdn2.iconfinder.com/data/icons/picol-vector/32/user_profile_edit-128.png"/>
 			</a>
-			<h3>Basic</h3>
+			<h3>User Info</h3>
 		</li>
 
 		<li id="nav-cart-review">
 			<a href="/cart/review?cart={{ cart.key.id() }}" title="Review my shopping cart">
-				<img src="http://cdn3.iconfinder.com/data/icons/mixed-3d-icons/512/membership-128.png"/>
+				<img src="http://cdn4.iconfinder.com/data/icons/vectory-personnel-1/40/group_1-128.png"/>
 			</a>
 			<h3>Membership</h3>
 		</li>		
